fix TNS links for FRBs

--- a/templates/tom_targets/partials/target_buttons.html
+++ b/templates/tom_targets/partials/target_buttons.html
@@ -1,6 +1,6 @@
 {% load targets_extras target_extras %}
 {% with target.name|split_name as name %}
-{% if name.has_tns_prefix %}
+{% if name.tns_objname %}
     <a href="{% url 'custom_code:classify' pk=target.id %}" title="Classify target on TNS" class="btn btn-secondary">Classify</a>
 {% else %}
     <a href="{% url 'custom_code:report' pk=target.id %}" title="Report target to TNS" class="btn btn-secondary">Report</a>
