add field centers on survey observation page

--- a/templates/tom_surveys/observation_list.html
+++ b/templates/tom_surveys/observation_list.html
@@ -17,6 +17,8 @@
         <tr>
           <th>Facility</th>
           <th>Field</th>
+          <th>R.A. (&deg;)</th>
+          <th>Dec. (&deg;)</th>
           <th>Time</th>
           {% if request.GET.localization_event %}<th>&Delta;t</th>{% endif %}
           <th>Status</th>
@@ -28,6 +30,8 @@
         <tr>
           <td>{{ observation.facility }}</td>
           <td>{{ observation.survey_field.name }}</td>
+          <td>{{ observation.survey_field.ra|floatformat:3 }}</td>
+          <td>{{ observation.survey_field.dec|floatformat:3 }}</td>
           <td>{{ observation.scheduled_start }}</td>
           {% if request.GET.localization_event %}<td>{{ observation.scheduled_start | time_after_event:request.GET.localization_event }}</td>{% endif %}
           <td>{{ observation.status }}</td>
