--- a/trove_nonlocalizedevents/templates/trove_nonlocalizedevents/candidate_list.html
+++ b/trove_nonlocalizedevents/templates/trove_nonlocalizedevents/candidate_list.html
@@ -15,7 +15,8 @@
     <table class="table table-sm table-hover">
       <thead>
         <tr>
-          <th>Target</th>
+	  <th>Rank</th>
+	  <th>Target</th>
           <th>Event</th>
           <th>Score</th>
         </tr>
@@ -24,7 +25,8 @@
 	{% get_event_candidate_scores object_list 'host_distance_score' 'predetection_score' 'ps_score' 'skymap_score' 'phot_peak_lum' 'phot_peak_time' 'phot_decay_rate' as candidates_to_display %}
 	{% for candidate in candidates_to_display %}
         <tr>
-          <td>
+	  <td>{{forloop.counter}}</td>
+	  <td>
             {% if candidate.target is not None %}
               <a href="{% url 'targets:detail' candidate.target.id %}?nonlocalizedevent={{ candidate.nonlocalizedevent.event_id }}" title="{{ candidate.target.name }}" target="_blank">{{ candidate.target.name|slice:":9" }}<wbr>{{ candidate.target.name|slice:"9:" }}</a>
             {% else %}
