prioritize independent and spec-z distance measurements for the distance score

--- a/templates/tom_targets/partials/galaxy_table.html
+++ b/templates/tom_targets/partials/galaxy_table.html
@@ -8,7 +8,7 @@
       <th scope="col">Off.  <br/> (")</th>
       <th scope="col">Dist. <br/> (Mpc)</th>
       <th scope="col">Redshift</th>
-      <th scope="col">Redshift Type</th>
+      <th scope="col">Distance Type</th>
       <th scope="col">Mag.  <br/> (AB)</th>
       <th scope="col">Source</th>
     </tr>
