Updated the printout for when no hosts found, to be clearer

--- a/templates/tom_targets/partials/galaxy_table.html
+++ b/templates/tom_targets/partials/galaxy_table.html
@@ -53,6 +53,6 @@
       <td>{{ galaxy.Source }}</td>
     </tr>
   {% empty %}
-    <tr><td colspan=9>No host galaxies stored</td></tr>
+    <tr><td colspan=9>No viable host galaxies stored</td></tr>
   {% endfor %}
 </table>
