--- a/templates/tom_targets/partials/target_buttons.html
+++ b/templates/tom_targets/partials/target_buttons.html
@@ -11,5 +11,6 @@
     <a href="{% url 'tom_targets:share' pk=target.id %}" title="Share target" class="btn btn-info">Share</a>
 {% endif %}
 <a href="{% url 'tom_targets:delete' pk=target.id %}" title="Delete target" class="btn btn-danger">Delete</a>
+<a href="{% url 'candidate_vetting:checknewphot' pk=target.id %}" title="Check for new data" class="btn btn-warning">Update Lightcurve</a>
 
 {% get_buttons target %}
