--- a/templates/tom_targets/partials/target_buttons.html
+++ b/templates/tom_targets/partials/target_buttons.html
@@ -1,17 +1,7 @@
-{% load targets_extras target_extras %}
-{% with target.name|split_name as name %}
-{% if name.tns_objname %}
-    <a href="{% url 'custom_code:classify' pk=target.id %}" title="Classify target on TNS" class="btn btn-secondary">Classify</a>
-{% else %}
-    <a href="{% url 'custom_code:report' pk=target.id %}" title="Report target to TNS" class="btn btn-secondary">Report</a>
-{% endif %}
-{% endwith %}
+{% load targets_extras %}
 <a href="{% url 'tom_targets:update' pk=target.id %}" title="Edit target details" class="btn btn-primary">Edit</a>
 {% if sharing %}
     <a href="{% url 'tom_targets:share' pk=target.id %}" title="Share target" class="btn btn-info">Share</a>
 {% endif %}
 <a href="{% url 'tom_targets:delete' pk=target.id %}" title="Delete target" class="btn btn-danger">Delete</a>
-
-<a href="{% url 'custom_code:mpc' pk=target.id %}" title="Run MPC on target" class="btn btn-warning">MPC</a>
-
-{% get_buttons target %}
+{% get_buttons %}
