Add DECam candidates UI with separate table and enhanced display
- Created DecamCandidateListView with advanced filtering (date, field, band, CNN, SNR, Gaia, DESI)
- Added grouped candidate display showing multiple filters per target
- Created decam_candidates_table template tag for target detail pages
- Added DECam thumbnail serving via decam_thumbnail_url template filter
- Updated navigation to include 'DECam Candidates' link
- Separated CSS and DECam candidate displays in target detail view
- Features: color-coded CNN scores, Gaia/DESI badges, inline thumbnails
- Total: 250 DECam candidates ingested from 2 nights

--- a/templates/tom_common/navbar_content.html
+++ b/templates/tom_common/navbar_content.html
@@ -36,6 +36,10 @@ For customization instructions, see tom_common/base.html
         <li class="nav-item">
             <a class="nav-link" href="{% url 'custom_code:candidates' %}?obsdate_range_after={% now 'Y-m-d' %}&classification=0&order=-mlscore_real" style="color:black">Candidates</a>
         </li>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'custom_code:decam-candidates' %}" style="color:black">DECam Candidates</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="{% url 'custom_code:candidates' %}?target__name__startswith=AT,SN,TDE&order=-observation_record__scheduled_start" style="color:black">TNS Transients</a>
         </li>
