--- a/templates/tom_targets/partials/candidates_table.html
+++ b/templates/tom_targets/partials/candidates_table.html
@@ -1,5 +1,6 @@
 {% load tom_common_extras candidate_extras target_list_extras %}
 
+<h5>CSS Observations</h5>
 <table class="table table-hover">
   <thead>
     <tr>
