rename Candidates to CSS Candidates

--- a/templates/tom_targets/candidate_list.html
+++ b/templates/tom_targets/candidate_list.html
@@ -7,7 +7,7 @@
 {% nonlocalizedevent_details %}
 <div class="row"><div class="col-md-12">{% skymap_event_id survey_candidates=filter.qs %}</div></div>
 {% else %}
-<h1>Candidates</h1>
+<h1>CSS Candidates</h1>
 {% endif %}
 <div class="row">
     <div class="col-md-12">
