--- a/templates/tom_dataproducts/partials/photometry_datalist_for_target.html
+++ b/templates/tom_dataproducts/partials/photometry_datalist_for_target.html
@@ -28,16 +28,16 @@
             <tr>
                 <td><input type="checkbox" class="phot-row" id="phot-row-{{ datum.id }}" name="share-box" value="{{ datum.id }}" onchange="check_selected()"></td>
                 <td>{{ datum.timestamp }}</td>
-                <td>{{ datum.filter }}</td>
-                <td>{{ datum|format_mag }}</td>
-                {% if datum.error %}
-                    <td>{{ datum.error|error_to_snr|floatformat:0 }}</td>
-                {% elif datum.limit %}
+                <td>{{ datum.value.filter }}</td>
+                <td>{{ datum.value|format_mag }}</td>
+                {% if datum.value.error %}
+                    <td>{{ datum.value.error|error_to_snr|floatformat:0 }}</td>
+                {% elif datum.value.limit %}
                     <td>< 3</td>
                 {% else %}
                     <td></td>
                 {% endif %}
-                <td>{{ datum.source }}</td>
+                <td>{{ datum.source_name }}</td>
             </tr>
             {% empty %}
             <tr>
