--- a/templates/tom_targets/targetclassify_form.html
+++ b/templates/tom_targets/targetclassify_form.html
@@ -5,7 +5,7 @@
 <h1>Classify {{ target.name }} on the TNS</h1>
 <div class="row">
     <div class="col-md-12">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             {% csrf_token %}
             {% crispy form %}
         </form>
